CHANGES
=======

* Split report table into important and extended stats
* Removed break tag
* Re-added intercontig >10kbp stat
* Remove whitespace in report to fix orphaned footer
* Add library sufficiency metrics
* Update HQ RP >10kbp threshold based on review comments
* Adjust QC thresholds to reflect empirical data and add an additional QC metric for intercontig HQ RPs spanning contigs >10kbp
* Add pbr versioning (#18)
* Switch to bam name in dup saturation plot
* Removed git merge info from file
* Merging from master
* Added stats for high quality read pairs and made numerous aesthetic improvements
* Class-based refactor (#15)
* Added additional documentation, added outfile\_prefix to paths dict, changed histogram plotting routine to remove warning
* Added additional documentation
* Pulled Assembly stats into separate table, fixed some whitespace, switched fraction/proportion references to percentages
* Set extrapolated dup rate to -1 if it fails, catch ZeroDivisionError, change fraction/proportion references to percentages
* Incorporated changes from pretty\_report\_numbers branch including updates to report template md and css files
* This is a class-based refactoring of bam\_to\_mate\_hist. It includes a number of additional features including:   - Detection of coordinate-sorted bam files (if labeled in header)   - Skipping of supplementary and secondary reads   - Counting of unmapped reads
* Add Travis CI integration (#13)
* Switch badge to be based off of master branch
* Add Travis CI badge
* Added missing scipy dependency
* Fixing travis file (again)
* Fixing travis file
* Initial commit for setup.py
* Initial commit for Travis CI
* Minor indentation fix
* Fixed issue with zero dist reads in log log plot
* Added log-log plot, use basename for bamfile in histograms
* Add default returns for V and K when exiting dupe saturation early
* Add writing out of dists file, containing all distances in the histogram